                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Fandrich (14 Nov 2008)
- Added .xml as one of the few common file extensions known by the multipart
  form generator.

Yang Tse (13 Nov 2008)
- Refactored configure script detection of functions used to set sockets into
  non-blocking mode, and decouple function detection from function capability.

Version 7.19.2 (13 November 2008)

Michal Marek (13 Nov 2008)
- Fixed a potential data loss in Curl_client_write() when the transfer is
  paused.

Daniel Stenberg (11 Nov 2008)
- Rainer Canavan filed bug #2255627
  (http://curl.haxx.se/bug/view.cgi?id=2255627) which pointed out that a
  program using libcurl's multi interface to download a HTTPS page with a
  libcurl built powered by OpenSSL, would easily get silly and instead hand
  over SSL details as data instead of the actual HTTP headers and body. This
  happened because libcurl would consider the connection handshake done too
  early. This problem was introduced at September 22nd 2008 with my fix of the
  bug #2107377

  The correct fix is now instead done within the GnuTLS-handling code, as both
  the OpenSSL and the NSS code already deal with this situation in similar
  fashion. I added test case 560 in an attempt to verify this fix, but
  unfortunately it didn't trigger it even before this fix!

Yang Tse (11 Nov 2008)
- Related with bug #2230535 (http://curl.haxx.se/bug/view.cgi?id=2230535)
  Daniel Fandrich noticed that curl_addrinfo was also missing in the build
  process of other four non-configure platforms. Added now.

Daniel Fandrich (7 Nov 2008)
- The getifaddrs() version of Curl_if2ip() crashed when used on a Linux
  system with a TEQL load-balancing device configured, which doesn't